refactor: put the format string in front of what fills it
`String.format(template, values)` reads outside-in; `template.formatted(values)`
reads in the order it is written, and drops a class name that says nothing. Every
call here uses the default locale, so the two are the same method — the overload
taking an explicit locale has no instance form, and there are none of those.

Collecting the duplicate names a validator reports now says the set is not to be
changed, which is what all three callers already assumed.

Left alone: the `String.format` inside generated logging. Reading generated code
is easier when the JDK call is the one being read, and it is the reader's own
build that compiles it.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>